2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	Add a feature extraction only plugin for GCC

	* AUTHORS: Added file.
	* CMakeLists.txt: Likewise.
	* COPYING: Likewise.
	* FeatureExtract.cpp: Likewise.
	* FeatureExtract.h: Likewise.
	* Features.h: Likewise.
	* Plugin.cpp: Likewise.
	* Plugin.h: Likewise.
	* README: Likewise.

2016-07-15  Edward Jones  <ed.jones@embecosm.com>

	* GCCCallbacks.cpp: Update to handle pass sequences as a parameter.
	* Parameters.h: Added file, defining the ParameterID enumeration.

2016-01-28  Edward Jones  <ed.jones@embecosm.com>

	* GCCCallbacks.cpp (mageecFinishFile): Emit the full filename into the
	compilation id file.
	* GCCPlugin.cpp (parseArguments): Open the output file for appending
	instead of writing.

2016-01-21  Edward Jones  <ed.jones@embecosm.com>

	* GCCCallbacks.cpp (mageecStartFile): Emit filename in debug.
	(mageecFinishFile): Retrieve the module name, used when saving a
	compiler configuration in the database. Emit the module name in
	debug.
	* GCCPlugin.cpp (parseArguments): Fix bug where we would accidentally
	print machine learners when the optimize flag was provided to the
	plugin.

2016-01-21  Edward Jones  <ed.jones@embecosm.com>

	* GCCCallbacks.cpp: Add more debug.
	* GCCPlugin.cpp: Likewise.

2016-01-20  Edward Jones  <ed.jones@embecosm.com>

	* GCCCallbacks.cpp (extractModuleFeatures): Stub implementation to
	derive module level features from the function.
	(mageecFinishFile): Extract features for the module if all of the
	constituent functions have the same compiler configuration.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* GCCCallbacks.cpp: Fix gcc warnings and errors.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Inherit MAGEEC_WITH_DEBUG from the main project
	build. Add more diagnostics when searching for the gcc plugin
	headers.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: Use Attribute/AttributeSet headers instead of