@@ -60,24 +60,36 @@ endif ()
 
 
 # Set compiler options depending on the compiler
+#
+# In debug mode, disable optimizations, and use -Werror will warnings
+# selectively disabled.
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-  set (CMAKE_CXX_FLAGS "\
--fPIC -fno-rtti -std=gnu++11 -Werror -Weverything \
--Wno-c++98-compat-pedantic -Wno-global-constructors -Wno-padded \
--Wno-weak-vtables -Wno-switch-enum -Wno-reserved-id-macro \
+  set (CMAKE_CXX_FLAGS "-fPIC -fno-rtti -std=gnu++11")
+  if (NOT MAGEEC_DEBUG)
+    set (CMAKE_CXX_FLAGS "-O1 ${CMAKE_CXX_FLAGS}")
+  endif()
+  
+  # Quite a lot of warnings must be disabled in order to get the GCC plugin
+  # headers to build.
+  if (MAGEEC_DEBUG)
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g3 \
+-Werror -Weverything -Wno-c++98-compat-pedantic -Wno-global-constructors \
+-Wno-padded -Wno-weak-vtables -Wno-switch-enum -Wno-reserved-id-macro \
 -Wno-old-style-cast -Wno-undef -Wno-sign-conversion \
 -Wno-mismatched-tags -Wno-reserved-user-defined-literal \
 -Wno-shadow -Wno-shorten-64-to-32 -Wno-cast-align -Wno-conversion \
 -Wno-disabled-macro-expansion -Wno-exit-time-destructors")
-  if (MAGEEC_DEBUG)
-    set (CMAKE_CXX_FLAGS "-g3 ${CMAKE_CXX_FLAGS}")
   endif ()
 
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-  set (CMAKE_CXX_FLAGS "\
--fPIC -fno-rtti -std=gnu++11 -Werror -Wall -Wextra -Wno-literal-suffix")
+  set (CMAKE_CXX_FLAGS "-fPIC -fno-rtti -std=gnu++11")
+  if (NOT MAGEEC_DEBUG)
+    set (CMAKE_CXX_FLAGS "-O1 ${CMAKE_CXX_FLAGS}")
+  endif()
+
   if (MAGEEC_DEBUG)
-    set (CMAKE_CXX_FLAGS "-g3 ${CMAKE_CXX_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g3 \
+-Werror -Wall -Wextra -Wno-literal-suffix")
   endif ()
 
 else ()
